# build-your-own-redis-hs

./: CHANGELOG.md  LICENSE  README.md  build-your-own-redis-hs.cabal
app/: Client.hs  Server.hs
src/: Common.hs  Protocol.hs
src/Storage/: Strings.hs
