cabal-version:      3.4
name:               build-your-own-redis-hs
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             filipkrunic
maintainer:         fkrunic9@gmail.com
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall 

library
    exposed-modules: Protocol
    hs-source-dirs:  src
    build-depends:
        base ^>=4.16.4.0,
        binary,
        bytestring,
        text
    default-language: GHC2021        

executable redis-server
    import:           warnings
    main-is:          Server.hs
    build-depends:    
        base ^>=4.16.4.0,
        binary,
        build-your-own-redis-hs,
        text,
        network-simple
    hs-source-dirs:   app
    default-language: GHC2021

executable redis-client
    import:           warnings
    main-is:          Client.hs
    build-depends:    
        base ^>=4.16.4.0,
        binary,
        build-your-own-redis-hs,
        text,
        network-simple
    hs-source-dirs:   app
    default-language: GHC2021